# gzip-up

./: .gitignore  LICENSE  README.md  pyproject.toml  run_tests.py
src/gzip_up/: __init__.py  __main__.py  file_operations.py  main.py  slurm_operations.py  utils.py
src/slurm_gzip/: file_operations.py  main.py  slurm_operations.py
src/slurm_gzip.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_file_operations.py  test_main.py  test_slurm_operations.py  test_utils.py
